<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="78dp"
            android:layout_height="70dp"
            android:src="@drawable/image1" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="220dp"
            android:layout_height="65dp"
            android:layout_marginTop="65dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="41dp"
            android:layout_marginEnd="43dp"
            android:text="@string/Registr"
            android:textColor="@color/green"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="519dp"
        android:orientation="vertical"
        android:background="@color/green">

        <TextView
            android:id="@+id/instructionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="65dp"
            android:layout_marginStart="70dp"
            android:text="@string/text1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditText"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="73dp"
            android:hint="@string/log"
            android:textSize="14sp"
            android:textColorHint="@color/black"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="73dp"
            android:hint="@string/password"
            android:textSize="14sp"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="183dp"
            android:text="@string/vhod"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@drawable/edittext_background" />

    </LinearLayout>

</LinearLayout>